memcached/internal/proto_text_parser.c

/* #line 1 "memcached/internal/proto_text_parser.rl" */
#include <stdint.h>
#include <stddef.h>
#include <stdbool.h>
#include <string.h>
#include <assert.h>
#include <stdio.h>

#include <module.h>

#include "memcached.h"
#include "constants.h"
#include "utils.h"
#include "error.h"

#include "proto_text.h"
#include "proto_text_parser.h"


/* #line 22 "memcached/internal/proto_text_parser.c" */
static const int memcached_text_parser_start = 1;
static const int memcached_text_parser_first_final = 128;
static const int memcached_text_parser_error = 0;

static const int memcached_text_parser_en_main = 1;


/* #line 21 "memcached/internal/proto_text_parser.rl" */


static inline const char *
skip_line(const char *begin, const char *end)
{
	for (; begin < (end - 1) &&*begin != '\r' && *(begin + 1) != '\n'; ++begin);
	return begin;
}

int
memcached_text_parser(struct memcached_connection *con,
					  const char **p_ptr, const char *pe)
{
	const char *p = *p_ptr;
	int cs = 0;
	const char *s = NULL;
	bool done = false;

	struct memcached_text_request *req = &con->request;
	memset(req, 0, sizeof(struct memcached_text_request));

	
/* #line 53 "memcached/internal/proto_text_parser.c" */
	{
	cs = memcached_text_parser_start;
	}

/* #line 58 "memcached/internal/proto_text_parser.c" */
	{
	if ( p == pe )
		goto _test_eof;
	switch ( cs )
	{
case 1:
	switch( (*p) ) {
		case 65: goto st2;
		case 67: goto st28;
		case 68: goto st41;
		case 70: goto st67;
		case 71: goto st78;
		case 73: goto st85;
		case 80: goto st89;
		case 81: goto st96;
		case 82: goto st100;
		case 83: goto st107;
		case 86: goto st114;
		case 97: goto st2;
		case 99: goto st28;
		case 100: goto st41;
		case 102: goto st67;
		case 103: goto st78;
		case 105: goto st85;
		case 112: goto st89;
		case 113: goto st96;
		case 114: goto st100;
		case 115: goto st107;
		case 118: goto st114;
	}
	goto st0;
st0:
cs = 0;
	goto _out;
st2:
	if ( ++p == pe )
		goto _test_eof2;
case 2:
	switch( (*p) ) {
		case 68: goto st3;
		case 80: goto st23;
		case 100: goto st3;
		case 112: goto st23;
	}
	goto st0;
st3:
	if ( ++p == pe )
		goto _test_eof3;
case 3:
	switch( (*p) ) {
		case 68: goto st4;
		case 100: goto st4;
	}
	goto st0;
st4:
/* #line 112 "memcached/internal/proto_text_parser.rl" */
	{req->op = MEMCACHED_TXT_CMD_ADD;}
	if ( ++p == pe )
		goto _test_eof4;
case 4:
/* #line 119 "memcached/internal/proto_text_parser.c" */
	if ( (*p) == 32 )
		goto st5;
	goto st0;
st5:
	if ( ++p == pe )
		goto _test_eof5;
case 5:
	switch( (*p) ) {
		case 13: goto st0;
		case 32: goto st5;
	}
	if ( 9 <= (*p) && (*p) <= 10 )
		goto st0;
	goto tr16;
tr16:
/* #line 43 "memcached/internal/proto_text_parser.rl" */
	{
			s = p;
			for (; p < pe && *p != ' ' && *p != '\r' && *p != '\n'; p++);
			if (*p == ' ' || *p == '\r' || *p == '\n') {
				if (req->key == NULL)
					req->key = s;
				req->key_len = (p-- - req->key);
				req->key_count += 1;
			} else {
				p = s;
			}
		}
	goto st6;
st6:
	if ( ++p == pe )
		goto _test_eof6;
case 6:
/* #line 153 "memcached/internal/proto_text_parser.c" */
	if ( (*p) == 32 )
		goto st7;
	goto st0;
st7:
	if ( ++p == pe )
		goto _test_eof7;
case 7:
	if ( (*p) == 32 )
		goto st7;
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr18;
	goto st0;
tr18:
/* #line 84 "memcached/internal/proto_text_parser.rl" */
	{ s = p; }
	goto st8;
st8:
	if ( ++p == pe )
		goto _test_eof8;
case 8:
/* #line 174 "memcached/internal/proto_text_parser.c" */
	if ( (*p) == 32 )
		goto tr19;
	if ( 48 <= (*p) && (*p) <= 57 )
		goto st8;
	goto st0;
tr19:
/* #line 85 "memcached/internal/proto_text_parser.rl" */
	{ memcached_strtoul(s, p, &req->flags); }
	goto st9;
st9:
	if ( ++p == pe )
		goto _test_eof9;
case 9:
/* #line 188 "memcached/internal/proto_text_parser.c" */
	if ( (*p) == 32 )
		goto st9;
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr22;
	goto st0;
tr22:
/* #line 81 "memcached/internal/proto_text_parser.rl" */
	{ s = p; }
	goto st10;
st10:
	if ( ++p == pe )
		goto _test_eof10;
case 10:
/* #line 202 "memcached/internal/proto_text_parser.c" */
	if ( (*p) == 32 )
		goto tr23;
	if ( 48 <= (*p) && (*p) <= 57 )
		goto st10;
	goto st0;
tr23:
/* #line 82 "memcached/internal/proto_text_parser.rl" */
	{ memcached_strtoul(s, p, &req->exptime); }
	goto st11;
st11:
	if ( ++p == pe )
		goto _test_eof11;
case 11:
/* #line 216 "memcached/internal/proto_text_parser.c" */
	if ( (*p) == 32 )
		goto st11;
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr26;
	goto st0;
tr26:
/* #line 87 "memcached/internal/proto_text_parser.rl" */
	{ s = p; }
	goto st12;
st12:
	if ( ++p == pe )
		goto _test_eof12;
case 12:
/* #line 230 "memcached/internal/proto_text_parser.c" */
	switch( (*p) ) {
		case 10: goto tr27;
		case 13: goto tr28;
		case 32: goto tr29;
	}
	if ( 48 <= (*p) && (*p) <= 57 )
		goto st12;
	goto st0;
tr27:
/* #line 88 "memcached/internal/proto_text_parser.rl" */
	{ memcached_strtoul(s, p, &req->bytes); }
/* #line 99 "memcached/internal/proto_text_parser.rl" */
	{ p++; }
/* #line 55 "memcached/internal/proto_text_parser.rl" */
	{
			req->data = p;
			req->data_len = req->bytes;

			if (req->data + req->data_len <= pe - 2) {
				if (strncmp(req->data + req->data_len, "\r\n", 2) != 0) {
					/**
					 * IDK what to do - skip it or not
					 */
					memcached_error_EINVALS("malformed data (can't find \r\n "
											"at the end of the query)");
					con->close_connection = true;
					return -1;
				}
				p += req->bytes + 2;
			} else {
				return (req->data_len + 2) - (pe - req->data);
			}
		}
/* #line 74 "memcached/internal/proto_text_parser.rl" */
	{
			done = true;
		}
	goto st128;
tr31:
/* #line 99 "memcached/internal/proto_text_parser.rl" */
	{ p++; }
/* #line 55 "memcached/internal/proto_text_parser.rl" */
	{
			req->data = p;
			req->data_len = req->bytes;

			if (req->data + req->data_len <= pe - 2) {
				if (strncmp(req->data + req->data_len, "\r\n", 2) != 0) {
					/**
					 * IDK what to do - skip it or not
					 */
					memcached_error_EINVALS("malformed data (can't find \r\n "
											"at the end of the query)");
					con->close_connection = true;
					return -1;
				}
				p += req->bytes + 2;
			} else {
				return (req->data_len + 2) - (pe - req->data);
			}
		}
/* #line 74 "memcached/internal/proto_text_parser.rl" */
	{
			done = true;
		}
	goto st128;
tr41:
/* #line 101 "memcached/internal/proto_text_parser.rl" */
	{ req->noreply = true; }
/* #line 99 "memcached/internal/proto_text_parser.rl" */
	{ p++; }
/* #line 55 "memcached/internal/proto_text_parser.rl" */
	{
			req->data = p;
			req->data_len = req->bytes;

			if (req->data + req->data_len <= pe - 2) {
				if (strncmp(req->data + req->data_len, "\r\n", 2) != 0) {
					/**
					 * IDK what to do - skip it or not
					 */
					memcached_error_EINVALS("malformed data (can't find \r\n "
											"at the end of the query)");
					con->close_connection = true;
					return -1;
				}
				p += req->bytes + 2;
			} else {
				return (req->data_len + 2) - (pe - req->data);
			}
		}
/* #line 74 "memcached/internal/proto_text_parser.rl" */
	{
			done = true;
		}
	goto st128;
tr67:
/* #line 91 "memcached/internal/proto_text_parser.rl" */
	{ memcached_strtoul(s, p, &req->cas); }
/* #line 99 "memcached/internal/proto_text_parser.rl" */
	{ p++; }
/* #line 55 "memcached/internal/proto_text_parser.rl" */
	{
			req->data = p;
			req->data_len = req->bytes;

			if (req->data + req->data_len <= pe - 2) {
				if (strncmp(req->data + req->data_len, "\r\n", 2) != 0) {
					/**
					 * IDK what to do - skip it or not
					 */
					memcached_error_EINVALS("malformed data (can't find \r\n "
											"at the end of the query)");
					con->close_connection = true;
					return -1;
				}
				p += req->bytes + 2;
			} else {
				return (req->data_len + 2) - (pe - req->data);
			}
		}
/* #line 74 "memcached/internal/proto_text_parser.rl" */
	{
			done = true;
		}
	goto st128;
tr79:
/* #line 94 "memcached/internal/proto_text_parser.rl" */
	{ memcached_strtoul(s, p, &req->delta); }
/* #line 99 "memcached/internal/proto_text_parser.rl" */
	{ p++; }
/* #line 74 "memcached/internal/proto_text_parser.rl" */
	{
			done = true;
		}
	goto st128;
tr83:
/* #line 99 "memcached/internal/proto_text_parser.rl" */
	{ p++; }
/* #line 74 "memcached/internal/proto_text_parser.rl" */
	{
			done = true;
		}
	goto st128;
tr93:
/* #line 101 "memcached/internal/proto_text_parser.rl" */
	{ req->noreply = true; }
/* #line 99 "memcached/internal/proto_text_parser.rl" */
	{ p++; }
/* #line 74 "memcached/internal/proto_text_parser.rl" */
	{
			done = true;
		}
	goto st128;
tr104:
/* #line 82 "memcached/internal/proto_text_parser.rl" */
	{ memcached_strtoul(s, p, &req->exptime); }
/* #line 99 "memcached/internal/proto_text_parser.rl" */
	{ p++; }
/* #line 74 "memcached/internal/proto_text_parser.rl" */
	{
			done = true;
		}
	goto st128;
tr118:
/* #line 97 "memcached/internal/proto_text_parser.rl" */
	{ memcached_strtoul(s, p, &req->exptime); }
/* #line 99 "memcached/internal/proto_text_parser.rl" */
	{ p++; }
/* #line 74 "memcached/internal/proto_text_parser.rl" */
	{
			done = true;
		}
	goto st128;
st128:
	if ( ++p == pe )
		goto _test_eof128;
case 128:
/* #line 409 "memcached/internal/proto_text_parser.c" */
	goto st0;
tr28:
/* #line 88 "memcached/internal/proto_text_parser.rl" */
	{ memcached_strtoul(s, p, &req->bytes); }
	goto st13;
tr42:
/* #line 101 "memcached/internal/proto_text_parser.rl" */
	{ req->noreply = true; }
	goto st13;
tr68:
/* #line 91 "memcached/internal/proto_text_parser.rl" */
	{ memcached_strtoul(s, p, &req->cas); }
	goto st13;
st13:
	if ( ++p == pe )
		goto _test_eof13;
case 13:
/* #line 427 "memcached/internal/proto_text_parser.c" */
	if ( (*p) == 10 )
		goto tr31;
	goto st0;
tr29:
/* #line 88 "memcached/internal/proto_text_parser.rl" */
	{ memcached_strtoul(s, p, &req->bytes); }
	goto st14;
tr69:
/* #line 91 "memcached/internal/proto_text_parser.rl" */
	{ memcached_strtoul(s, p, &req->cas); }
	goto st14;
st14:
	if ( ++p == pe )
		goto _test_eof14;
case 14:
/* #line 443 "memcached/internal/proto_text_parser.c" */
	switch( (*p) ) {
		case 10: goto tr31;
		case 13: goto st13;
		case 32: goto st14;
		case 78: goto st15;
		case 110: goto st15;
	}
	goto st0;
st15:
	if ( ++p == pe )
		goto _test_eof15;
case 15:
	switch( (*p) ) {
		case 79: goto st16;
		case 111: goto st16;
	}
	goto st0;
st16:
	if ( ++p == pe )
		goto _test_eof16;
case 16:
	switch( (*p) ) {
		case 82: goto st17;
		case 114: goto st17;
	}
	goto st0;
st17:
	if ( ++p == pe )
		goto _test_eof17;
case 17:
	switch( (*p) ) {
		case 69: goto st18;
		case 101: goto st18;
	}
	goto st0;
st18:
	if ( ++p == pe )
		goto _test_eof18;
case 18:
	switch( (*p) ) {
		case 80: goto st19;
		case 112: goto st19;
	}
	goto st0;
st19:
	if ( ++p == pe )
		goto _test_eof19;
case 19:
	switch( (*p) ) {
		case 76: goto st20;
		case 108: goto st20;
	}
	goto st0;
st20:
	if ( ++p == pe )
		goto _test_eof20;
case 20:
	switch( (*p) ) {
		case 89: goto st21;
		case 121: goto st21;
	}
	goto st0;
st21:
	if ( ++p == pe )
		goto _test_eof21;
case 21:
	switch( (*p) ) {
		case 10: goto tr41;
		case 13: goto tr42;
		case 32: goto tr43;
	}
	goto st0;
tr43:
/* #line 101 "memcached/internal/proto_text_parser.rl" */
	{ req->noreply = true; }
	goto st22;
st22:
	if ( ++p == pe )
		goto _test_eof22;
case 22:
/* #line 524 "memcached/internal/proto_text_parser.c" */
	switch( (*p) ) {
		case 10: goto tr31;
		case 13: goto st13;
		case 32: goto st22;
	}
	goto st0;
st23:
	if ( ++p == pe )
		goto _test_eof23;
case 23:
	switch( (*p) ) {
		case 80: goto st24;
		case 112: goto st24;
	}
	goto st0;
st24:
	if ( ++p == pe )
		goto _test_eof24;
case 24:
	switch( (*p) ) {
		case 69: goto st25;
		case 101: goto st25;
	}
	goto st0;
st25:
	if ( ++p == pe )
		goto _test_eof25;
case 25:
	switch( (*p) ) {
		case 78: goto st26;
		case 110: goto st26;
	}
	goto st0;
st26:
	if ( ++p == pe )
		goto _test_eof26;
case 26:
	switch( (*p) ) {
		case 68: goto st27;
		case 100: goto st27;
	}
	goto st0;
st27:
/* #line 114 "memcached/internal/proto_text_parser.rl" */
	{req->op = MEMCACHED_TXT_CMD_APPEND;}
	if ( ++p == pe )
		goto _test_eof27;
case 27:
/* #line 573 "memcached/internal/proto_text_parser.c" */
	if ( (*p) == 32 )
		goto st5;
	goto st0;
st28:
	if ( ++p == pe )
		goto _test_eof28;
case 28:
	switch( (*p) ) {
		case 65: goto st29;
		case 97: goto st29;
	}
	goto st0;
st29:
	if ( ++p == pe )
		goto _test_eof29;
case 29:
	switch( (*p) ) {
		case 83: goto st30;
		case 115: goto st30;
	}
	goto st0;
st30:
/* #line 116 "memcached/internal/proto_text_parser.rl" */
	{req->op = MEMCACHED_TXT_CMD_CAS;}
	if ( ++p == pe )
		goto _test_eof30;
case 30:
/* #line 601 "memcached/internal/proto_text_parser.c" */
	if ( (*p) == 32 )
		goto st31;
	goto st0;
st31:
	if ( ++p == pe )
		goto _test_eof31;
case 31:
	switch( (*p) ) {
		case 13: goto st0;
		case 32: goto st31;
	}
	if ( 9 <= (*p) && (*p) <= 10 )
		goto st0;
	goto tr52;
tr52:
/* #line 43 "memcached/internal/proto_text_parser.rl" */
	{
			s = p;
			for (; p < pe && *p != ' ' && *p != '\r' && *p != '\n'; p++);
			if (*p == ' ' || *p == '\r' || *p == '\n') {
				if (req->key == NULL)
					req->key = s;
				req->key_len = (p-- - req->key);
				req->key_count += 1;
			} else {
				p = s;
			}
		}
	goto st32;
st32:
	if ( ++p == pe )
		goto _test_eof32;
case 32:
/* #line 635 "memcached/internal/proto_text_parser.c" */
	if ( (*p) == 32 )
		goto st33;
	goto st0;
st33:
	if ( ++p == pe )
		goto _test_eof33;
case 33:
	if ( (*p) == 32 )
		goto st33;
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr54;
	goto st0;
tr54:
/* #line 84 "memcached/internal/proto_text_parser.rl" */
	{ s = p; }
	goto st34;
st34:
	if ( ++p == pe )
		goto _test_eof34;
case 34:
/* #line 656 "memcached/internal/proto_text_parser.c" */
	if ( (*p) == 32 )
		goto tr55;
	if ( 48 <= (*p) && (*p) <= 57 )
		goto st34;
	goto st0;
tr55:
/* #line 85 "memcached/internal/proto_text_parser.rl" */
	{ memcached_strtoul(s, p, &req->flags); }
	goto st35;
st35:
	if ( ++p == pe )
		goto _test_eof35;
case 35:
/* #line 670 "memcached/internal/proto_text_parser.c" */
	if ( (*p) == 32 )
		goto st35;
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr58;
	goto st0;
tr58:
/* #line 81 "memcached/internal/proto_text_parser.rl" */
	{ s = p; }
	goto st36;
st36:
	if ( ++p == pe )
		goto _test_eof36;
case 36:
/* #line 684 "memcached/internal/proto_text_parser.c" */
	if ( (*p) == 32 )
		goto tr59;
	if ( 48 <= (*p) && (*p) <= 57 )
		goto st36;
	goto st0;
tr59:
/* #line 82 "memcached/internal/proto_text_parser.rl" */
	{ memcached_strtoul(s, p, &req->exptime); }
	goto st37;
st37:
	if ( ++p == pe )
		goto _test_eof37;
case 37:
/* #line 698 "memcached/internal/proto_text_parser.c" */
	if ( (*p) == 32 )
		goto st37;
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr62;
	goto st0;
tr62:
/* #line 87 "memcached/internal/proto_text_parser.rl" */
	{ s = p; }
	goto st38;
st38:
	if ( ++p == pe )
		goto _test_eof38;
case 38:
/* #line 712 "memcached/internal/proto_text_parser.c" */
	if ( (*p) == 32 )
		goto tr63;
	if ( 48 <= (*p) && (*p) <= 57 )
		goto st38;
	goto st0;
tr63:
/* #line 88 "memcached/internal/proto_text_parser.rl" */
	{ memcached_strtoul(s, p, &req->bytes); }
	goto st39;
st39:
	if ( ++p == pe )
		goto _test_eof39;
case 39:
/* #line 726 "memcached/internal/proto_text_parser.c" */
	if ( (*p) == 32 )
		goto st39;
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr66;
	goto st0;
tr66:
/* #line 90 "memcached/internal/proto_text_parser.rl" */
	{ s = p; }
	goto st40;
st40:
	if ( ++p == pe )
		goto _test_eof40;
case 40:
/* #line 740 "memcached/internal/proto_text_parser.c" */
	switch( (*p) ) {
		case 10: goto tr67;
		case 13: goto tr68;
		case 32: goto tr69;
	}
	if ( 48 <= (*p) && (*p) <= 57 )
		goto st40;
	goto st0;
st41:
	if ( ++p == pe )
		goto _test_eof41;
case 41:
	switch( (*p) ) {
		case 69: goto st42;
		case 101: goto st42;
	}
	goto st0;
st42:
	if ( ++p == pe )
		goto _test_eof42;
case 42:
	switch( (*p) ) {
		case 67: goto st43;
		case 76: goto st59;
		case 99: goto st43;
		case 108: goto st59;
	}
	goto st0;
st43:
	if ( ++p == pe )
		goto _test_eof43;
case 43:
	switch( (*p) ) {
		case 82: goto st44;
		case 114: goto st44;
	}
	goto st0;
st44:
/* #line 122 "memcached/internal/proto_text_parser.rl" */
	{req->op = MEMCACHED_TXT_CMD_DECR;}
	if ( ++p == pe )
		goto _test_eof44;
case 44:
/* #line 784 "memcached/internal/proto_text_parser.c" */
	if ( (*p) == 32 )
		goto st45;
	goto st0;
st45:
	if ( ++p == pe )
		goto _test_eof45;
case 45:
	switch( (*p) ) {
		case 13: goto st0;
		case 32: goto st45;
	}
	if ( 9 <= (*p) && (*p) <= 10 )
		goto st0;
	goto tr76;
tr76:
/* #line 43 "memcached/internal/proto_text_parser.rl" */
	{
			s = p;
			for (; p < pe && *p != ' ' && *p != '\r' && *p != '\n'; p++);
			if (*p == ' ' || *p == '\r' || *p == '\n') {
				if (req->key == NULL)
					req->key = s;
				req->key_len = (p-- - req->key);
				req->key_count += 1;
			} else {
				p = s;
			}
		}
	goto st46;
st46:
	if ( ++p == pe )
		goto _test_eof46;
case 46:
/* #line 818 "memcached/internal/proto_text_parser.c" */
	if ( (*p) == 32 )
		goto st47;
	goto st0;
st47:
	if ( ++p == pe )
		goto _test_eof47;
case 47:
	if ( (*p) == 32 )
		goto st47;
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr78;
	goto st0;
tr78:
/* #line 93 "memcached/internal/proto_text_parser.rl" */
	{ s = p; }
	goto st48;
st48:
	if ( ++p == pe )
		goto _test_eof48;
case 48:
/* #line 839 "memcached/internal/proto_text_parser.c" */
	switch( (*p) ) {
		case 10: goto tr79;
		case 13: goto tr80;
		case 32: goto tr81;
	}
	if ( 48 <= (*p) && (*p) <= 57 )
		goto st48;
	goto st0;
tr105:
/* #line 82 "memcached/internal/proto_text_parser.rl" */
	{ memcached_strtoul(s, p, &req->exptime); }
	goto st49;
tr94:
/* #line 101 "memcached/internal/proto_text_parser.rl" */
	{ req->noreply = true; }
	goto st49;
tr80:
/* #line 94 "memcached/internal/proto_text_parser.rl" */
	{ memcached_strtoul(s, p, &req->delta); }
	goto st49;
tr119:
/* #line 97 "memcached/internal/proto_text_parser.rl" */
	{ memcached_strtoul(s, p, &req->exptime); }
	goto st49;
st49:
	if ( ++p == pe )
		goto _test_eof49;
case 49:
/* #line 868 "memcached/internal/proto_text_parser.c" */
	if ( (*p) == 10 )
		goto tr83;
	goto st0;
tr106:
/* #line 82 "memcached/internal/proto_text_parser.rl" */
	{ memcached_strtoul(s, p, &req->exptime); }
	goto st50;
tr81:
/* #line 94 "memcached/internal/proto_text_parser.rl" */
	{ memcached_strtoul(s, p, &req->delta); }
	goto st50;
tr120:
/* #line 97 "memcached/internal/proto_text_parser.rl" */
	{ memcached_strtoul(s, p, &req->exptime); }
	goto st50;
st50:
	if ( ++p == pe )
		goto _test_eof50;
case 50:
/* #line 888 "memcached/internal/proto_text_parser.c" */
	switch( (*p) ) {
		case 10: goto tr83;
		case 13: goto st49;
		case 32: goto st50;
		case 78: goto st51;
		case 110: goto st51;
	}
	goto st0;
st51:
	if ( ++p == pe )
		goto _test_eof51;
case 51:
	switch( (*p) ) {
		case 79: goto st52;
		case 111: goto st52;
	}
	goto st0;
st52:
	if ( ++p == pe )
		goto _test_eof52;
case 52:
	switch( (*p) ) {
		case 82: goto st53;
		case 114: goto st53;
	}
	goto st0;
st53:
	if ( ++p == pe )
		goto _test_eof53;
case 53:
	switch( (*p) ) {
		case 69: goto st54;
		case 101: goto st54;
	}
	goto st0;
st54:
	if ( ++p == pe )
		goto _test_eof54;
case 54:
	switch( (*p) ) {
		case 80: goto st55;
		case 112: goto st55;
	}
	goto st0;
st55:
	if ( ++p == pe )
		goto _test_eof55;
case 55:
	switch( (*p) ) {
		case 76: goto st56;
		case 108: goto st56;
	}
	goto st0;
st56:
	if ( ++p == pe )
		goto _test_eof56;
case 56:
	switch( (*p) ) {
		case 89: goto st57;
		case 121: goto st57;
	}
	goto st0;
st57:
	if ( ++p == pe )
		goto _test_eof57;
case 57:
	switch( (*p) ) {
		case 10: goto tr93;
		case 13: goto tr94;
		case 32: goto tr95;
	}
	goto st0;
tr95:
/* #line 101 "memcached/internal/proto_text_parser.rl" */
	{ req->noreply = true; }
	goto st58;
st58:
	if ( ++p == pe )
		goto _test_eof58;
case 58:
/* #line 969 "memcached/internal/proto_text_parser.c" */
	switch( (*p) ) {
		case 10: goto tr83;
		case 13: goto st49;
		case 32: goto st58;
	}
	goto st0;
st59:
	if ( ++p == pe )
		goto _test_eof59;
case 59:
	switch( (*p) ) {
		case 69: goto st60;
		case 101: goto st60;
	}
	goto st0;
st60:
	if ( ++p == pe )
		goto _test_eof60;
case 60:
	switch( (*p) ) {
		case 84: goto st61;
		case 116: goto st61;
	}
	goto st0;
st61:
	if ( ++p == pe )
		goto _test_eof61;
case 61:
	switch( (*p) ) {
		case 69: goto st62;
		case 101: goto st62;
	}
	goto st0;
st62:
/* #line 120 "memcached/internal/proto_text_parser.rl" */
	{req->op = MEMCACHED_TXT_CMD_DELETE;}
	if ( ++p == pe )
		goto _test_eof62;
case 62:
/* #line 1009 "memcached/internal/proto_text_parser.c" */
	if ( (*p) == 32 )
		goto st63;
